* new layout of chess-board * new component: chess-field * !!! new bug: background of piece visible while drag process * !!! new bug: "switch board" does not work * remove of all z-indexes - not necessary anymore * little code improvements

--- a/angular-chess/src/app/app.component.scss
+++ b/angular-chess/src/app/app.component.scss
@@ -1,5 +1,3 @@
-@import "../z-Indexes.scss";
-
 /* Application-wide Styles */
 h1 {
   color: #369;
@@ -33,12 +31,4 @@ app-move-history {
 /* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
-}
-
-app-main-menu {
-  z-index: $menu-index;
-}
-
-app-chess-board {
-  z-index: $base-index;
 }
